--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "p-timeout",
+	"name": "@xuhaojun/p-timeout",
 	"version": "5.0.2",
 	"description": "Timeout a promise after a specified amount of time",
 	"license": "MIT",
@@ -11,15 +11,25 @@
 		"url": "https://sindresorhus.com"
 	},
 	"type": "module",
-	"exports": "./index.js",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs",
+			"types": "./index.d.ts"
+    }
+	},
+  "main": "./dist/index.cjs",
+  "types": "./index.d.ts",
 	"engines": {
 		"node": ">=12"
 	},
 	"scripts": {
-		"test": "xo && ava && tsd"
+		"test": "xo && ava && tsd",
+		"build": "npx tsc-multi",
+		"prepublish": "npm run build"
 	},
 	"files": [
-		"index.js",
+		"dist",
 		"index.d.ts"
 	],
 	"keywords": [
@@ -36,12 +46,16 @@
 		"bluebird"
 	],
 	"devDependencies": {
+		"@tsconfig/node10": "^1.0.8",
+		"@types/node": "^17.0.23",
 		"ava": "^3.15.0",
 		"delay": "^5.0.0",
 		"in-range": "^3.0.0",
 		"p-cancelable": "^2.1.0",
 		"time-span": "^4.0.0",
+		"tsc-multi": "^0.6.1",
 		"tsd": "^0.14.0",
+		"typescript": "^4.6.3",
 		"xo": "^0.38.2"
 	}
 }
